--- a/Gallery.html
+++ b/Gallery.html
@@ -140,34 +140,38 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/glightbox/dist/css/glightbox.min.css" />
 
   <!-- GLightbox overrides -->
-  <style>
-    /* Lock the page when the lightbox is open */
-    html.glightbox-open,
-    body.glightbox-open {
-      height: 100%;
-      overflow: hidden !important;
-    }
+<style>
+  /* Lock the page while lightbox is open */
+  html.glightbox-open,
+  body.glightbox-open { height:100%; overflow:hidden !important; }
 
-    /* Keep slide media within the viewport and hide scrollbars */
-    .glightbox-container,
-    .glightbox-container .gslide,
-    .glightbox-container .gslide-media,
-    .glightbox-container .gslide-image {
-      overflow: hidden;
-      max-height: 90vh;
-    }
+  /* Keep every inner lightbox layer within the viewport and hide its scrollbars */
+  .glightbox-container,
+  .glightbox-container .ginner-container,
+  .glightbox-container .gcontent,
+  .glightbox-container .gslide,
+  .glightbox-container .gslide-media,
+  .glightbox-container .gslide-image { 
+    max-height: 100vh;
+    overflow: hidden !important;          /* <-- kills the inner scroll */
+    -ms-overflow-style: none;             /* IE/Edge */
+    scrollbar-width: none;                /* Firefox */
+  }
+  .glightbox-container .gslide::-webkit-scrollbar,
+  .glightbox-container .gslide-media::-webkit-scrollbar,
+  .glightbox-container .gslide-image::-webkit-scrollbar { display: none; } /* WebKit */
 
-    /* Fit image neatly without forcing scrollbars */
-    .glightbox-container .gslide-image img {
-      max-width: 95vw !important;
-      max-height: 90vh !important;
-      width: auto !important;
-      height: auto !important;
-      object-fit: contain;
-      display: block;
-    }
-  </style>
-
+  /* Image sizing so it never forces scroll */
+  .glightbox-container .gslide-image img {
+    max-width: 95vw !important;
+    max-height: 90vh !important;
+    width: auto !important;
+    height: auto !important;
+    object-fit: contain;
+    display: block;
+  }
+</style>
+  
   <script src="https://cdn.jsdelivr.net/npm/glightbox/dist/js/glightbox.min.js" defer></script>
   <script>
     document.addEventListener("DOMContentLoaded", function() {
