--- a/Gallery.html
+++ b/Gallery.html
@@ -6,171 +6,171 @@
   <title>Gallery</title>
   <link rel="icon" href="images/LogoInBlack.png?v=2" type="image/png" />
 
-  <style>
-    @font-face {
-      font-family: "Love Script";
-      src: url("Love script.ttf") format("truetype");
-    }
-    @font-face {
-      font-family: "Kingstyle";
-      src: url("Kingstyle.ttf") format("truetype");
-    }
-
-    /* Base */
-    body {
-      margin: 0;
-      padding: 0;
-      font-family: "Brush Script MT", cursive;
-      background-color: #ffeee2;
-    }
-
-    /* Header + nav */
-    .logo {
-      text-align: center;
-      background-color: #f7ddbb;
-      padding: 10px 0;
-      position: relative;
-      top: 0;
-      width: 100%;
-      z-index: 20;
-    }
-    .logo img {
-      width: 100px;
-      height: auto;
-    }
-    .menu-button {
-      display: none;
-      font-size: 24px;
-      background: none;
-      border: none;
-      cursor: pointer;
-      position: fixed;
-      top: 15px;
-      right: 20px;
-      z-index: 100;
-      background-color: #f7ddbb;
-      padding: 10px;
-      border-radius: 5px;
-    }
-    nav {
-      background-color: #f7ddbb;
-      padding: 15px 0;
-      position: relative;
-      width: 100%;
-      box-shadow: 0 4px 4px rgba(0,0,0,0.1);
-      z-index: 10;
-    }
-    .nav-menu {
-      list-style: none;
-      margin: 0;
-      padding: 0;
-      display: flex;
-      justify-content: center;
-    }
-    .nav-menu li { margin: 0 15px; }
-    .nav-menu li a {
-      text-decoration: none;
-      color: #000;
-      font-size: 18px;
-      font-family: Georgia, serif;
-    }
-
-    /* Gallery grid */
-    .gallery-wrap {
-      max-width: 1200px;
-      margin: 20px auto 0;
-      padding: 0 16px;
-    }
-    .thumb-grid {
-      display: grid;
-      grid-template-columns: repeat(auto-fill, minmax(180px, 1fr));
-      gap: 12px;
-    }
-    .thumb {
-      display: block;
-      position: relative;
-      border-radius: 10px;
-      overflow: hidden;
-      box-shadow: 0 6px 14px rgba(0,0,0,0.08);
-    }
-    .thumb img {
-      width: 100%;
-      height: 190px;
-      object-fit: cover;
-      display: block;
-      transition: transform .25s ease;
-    }
-    .thumb:hover img,
-    .thumb:focus img { transform: scale(1.03); }
-
-    .flower-image {
-      display: block;
-      margin: 32px auto 24px;
-      width: 100%;
-      max-width: 1200px;
-      height: auto;
-      padding: 0 16px;
-    }
-
-    /* Mobile */
-    @media (max-width: 768px) {
-      .menu-button { display: block; }
-      .nav-menu {
-        display: none;
-        flex-direction: column;
-        position: fixed;
-        top: 50px;
-        right: 20px;
+    <style>
+      @font-face {
+        font-family: "Love Script";
+        src: url("Love script.ttf") format("truetype");
+      }
+      @font-face {
+        font-family: "Kingstyle";
+        src: url("Kingstyle.ttf") format("truetype");
+      }
+  
+      /* Base */
+      body {
+        margin: 0;
+        padding: 0;
+        font-family: "Brush Script MT", cursive;
+        background-color: #ffeee2;
+      }
+  
+      /* Header + nav */
+      .logo {
+        text-align: center;
         background-color: #f7ddbb;
-        width: 200px;
-        box-shadow: 0 4px 4px rgba(0,0,0,0.1);
+        padding: 10px 0;
+        position: relative;
+        top: 0;
+        width: 100%;
+        z-index: 20;
+      }
+      .logo img {
+        width: 100px;
+        height: auto;
+      }
+      .menu-button {
+        display: none;
+        font-size: 24px;
+        background: none;
+        border: none;
+        cursor: pointer;
+        position: fixed;
+        top: 15px;
+        right: 20px;
+        z-index: 100;
+        background-color: #f7ddbb;
         padding: 10px;
         border-radius: 5px;
       }
-      .nav-menu.active { display: flex; }
-      .nav-menu li { margin: 10px 0; text-align: center; }
-
-      /* slightly tighter thumbs on small screens */
-      .thumb-grid { gap: 8px; }
-      .thumb img { height: 150px; }
+      nav {
+        background-color: #f7ddbb;
+        padding: 15px 0;
+        position: relative;
+        width: 100%;
+        box-shadow: 0 4px 4px rgba(0,0,0,0.1);
+        z-index: 10;
+      }
+      .nav-menu {
+        list-style: none;
+        margin: 0;
+        padding: 0;
+        display: flex;
+        justify-content: center;
+      }
+      .nav-menu li { margin: 0 15px; }
+      .nav-menu li a {
+        text-decoration: none;
+        color: #000;
+        font-size: 18px;
+        font-family: Georgia, serif;
+      }
+  
+      /* Gallery grid */
+      .gallery-wrap {
+        max-width: 1200px;
+        margin: 20px auto 0;
+        padding: 0 16px;
+      }
+      .thumb-grid {
+        display: grid;
+        grid-template-columns: repeat(auto-fill, minmax(180px, 1fr));
+        gap: 12px;
+      }
+      .thumb {
+        display: block;
+        position: relative;
+        border-radius: 10px;
+        overflow: hidden;
+        box-shadow: 0 6px 14px rgba(0,0,0,0.08);
+      }
+      .thumb img {
+        width: 100%;
+        height: 190px;
+        object-fit: cover;
+        display: block;
+        transition: transform .25s ease;
+      }
+      .thumb:hover img,
+      .thumb:focus img { transform: scale(1.03); }
+  
+      .flower-image {
+        display: block;
+        margin: 32px auto 24px;
+        width: 100%;
+        max-width: 1200px;
+        height: auto;
+        padding: 0 16px;
+      }
+  
+      /* Mobile */
+      @media (max-width: 768px) {
+        .menu-button { display: block; }
+        .nav-menu {
+          display: none;
+          flex-direction: column;
+          position: fixed;
+          top: 50px;
+          right: 20px;
+          background-color: #f7ddbb;
+          width: 200px;
+          box-shadow: 0 4px 4px rgba(0,0,0,0.1);
+          padding: 10px;
+          border-radius: 5px;
+        }
+        .nav-menu.active { display: flex; }
+        .nav-menu li { margin: 10px 0; text-align: center; }
+  
+        /* slightly tighter thumbs on small screens */
+        .thumb-grid { gap: 8px; }
+        .thumb img { height: 150px; }
+      }
+    </style>
+  
+    <!-- GLightbox CSS must load BEFORE our overrides -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/glightbox/dist/css/glightbox.min.css" />
+  
+    <!-- GLightbox overrides -->
+  <style>
+   /* Lock page scroll when lightbox is open */
+    html.glightbox-open,
+    body.glightbox-open {
+      height: 100%;
+      overflow: hidden !important;
+    }
+  
+    /* Lightbox layout wrappers shouldn't scroll */
+    .glightbox-container,
+    .glightbox-container .ginner-container,
+    .glightbox-container .gcontent,
+    .glightbox-container .gslide,
+    .glightbox-container .gslide-media,
+    .glightbox-container .gslide-image,
+    .glightbox-container .gslide-inner-content {
+      overflow: hidden !important;
+      max-height: 100vh;
+    }
+  
+    /* Images always fit within the viewport */
+    .glightbox-container .gslide-image img {
+      display: block;
+      margin: auto;
+      width: auto;
+      height: auto;
+      max-width: 100vw;   /* never exceed screen width */
+      max-height: 100vh;  /* never exceed screen height */
+      object-fit: contain;
     }
   </style>
-
-  <!-- GLightbox CSS must load BEFORE our overrides -->
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/glightbox/dist/css/glightbox.min.css" />
-
-  <!-- GLightbox overrides -->
-<style>
-  /* Lock the page while lightbox is open */
-  html.glightbox-open,
-  body.glightbox-open { height:100%; overflow:hidden !important; }
-
-  /* Keep every inner lightbox layer within the viewport and hide its scrollbars */
-  .glightbox-container,
-  .glightbox-container .ginner-container,
-  .glightbox-container .gcontent,
-  .glightbox-container .gslide,
-  .glightbox-container .gslide-media,
-  .glightbox-container .gslide-image { 
-    max-height: 100vh;
-    overflow: hidden !important;          /* <-- kills the inner scroll */
-    -ms-overflow-style: none;             /* IE/Edge */
-    scrollbar-width: none;                /* Firefox */
-  }
-  .glightbox-container .gslide::-webkit-scrollbar,
-  .glightbox-container .gslide-media::-webkit-scrollbar,
-  .glightbox-container .gslide-image::-webkit-scrollbar { display: none; } /* WebKit */
-
-  /* Image sizing so it never forces scroll */
-  .glightbox-container .gslide-image img {
-    max-width: 95vw !important;
-    max-height: 90vh !important;
-    width: auto !important;
-    height: auto !important;
-    object-fit: contain;
-    display: block;
-  }
-</style>
   
   <script src="https://cdn.jsdelivr.net/npm/glightbox/dist/js/glightbox.min.js" defer></script>
   <script>
